--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Little Zoo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <header>
@@ -18,14 +19,15 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav">
-                    <a href="#" class="nav-item nav-link disabled">Home</a>
-                    <a href="tierseite.html" class="nav-item nav-link active">Tierseite</a>
-                    <a href="ueberzoo.html" class="nav-item nav-link active">Über Zoo</a>
+                    <div class="navbar-nav">
+                        <a href="#" class="nav-item nav-link disabled">Home</a>
+                        <a href="tierseite.html" class="nav-item nav-link active">Tierseite</a>
+                        <a href="ueberzoo.html" class="nav-item nav-link active">Über Zoo</a>
                     </div>
                 </div>
             </div>  
         </nav>
+ 
         <!--Ende Navigationsleiste-->
     </header>
     <!--Inhalt-->
