--- a/weisserhai.html
+++ b/weisserhai.html
@@ -63,5 +63,18 @@
         </div>
 
     </section>
+    
+    <footer class="text-center text-white fixed-bottom">
+        <!-- Grid container -->
+        <div class="container p-4"></div>
+        <!-- Grid container -->
+      
+        <!-- Copyright -->
+        <div class="text-center p-3" id="footer-text">
+          © 2022 Copyright:
+          <a class="text-white" href="index.html">Meerezoo.ch</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
 </body>
 </html>
