--- a/tierseite.html
+++ b/tierseite.html
@@ -110,6 +110,17 @@
     <!--Ende Reihe 2-->
 
  <!--Fusszeile-->
-    <footer></footer>
+ <footer class="text-center text-white fixed-bottom">
+    <!-- Grid container -->
+    <div class="container p-4"></div>
+    <!-- Grid container -->
+  
+    <!-- Copyright -->
+    <div class="text-center p-3" id="footer-text">
+      © 2022 Copyright:
+      <a class="text-white" href="index.html">Meerezoo.ch</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
 </body>
 </html>
