--- a/tierseite.html
+++ b/tierseite.html
@@ -108,7 +108,7 @@
         </div>
     </div>
     <!--Ende Reihe 2-->
-
+ <div class="b-example-divider"></div>
  <!--Fusszeile-->
  <footer class="text-center text-white fixed-bottom">
     <!-- Grid container -->
