--- a/ueberzoo.html
+++ b/ueberzoo.html
@@ -49,6 +49,7 @@
       
         <!-- Copyright -->
         <div class="text-center p-3" id="footer-text">
+          <a class="text-white" href="#">Impressum</a>
           © 2022 Copyright:
           <a class="text-white" href="index.html">Meerezoo.ch</a>
         </div>
