--- a/impressum.html
+++ b/impressum.html
@@ -43,7 +43,7 @@
   
     <!-- Copyright -->
     <div class="text-center p-3" id="footer-text">
-      <a class="text-white" href="#">Impressum</a>
+      <a class="text-white" href="impressum.html">Impressum</a>
       © 2022 Copyright:
       <a class="text-white" href="index.html">Meerezoo.ch</a>
     </div>
