Text und Bild zentriert

--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
         <!--Ende Navigationsleiste-->
     </header>
     <!--Inhalt-->
+    <div class="b-example-divider"></div>
     <section>
     <div class="container" id="inhalt">
         <div class="row ">
             <div class="col">
                 <img src="img/Dummyzoo.jfif" class="rounded mx-auto d-block" alt="Zoo">
                 </div>
-            <div class="col align-self-center text-info ">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi porro maxime libero, molestias dolore earum amet expedita debitis commodi laudantium, enim, deleniti molestiae consequatur impedit rerum assumenda numquam. Perspiciatis modi odit officiis autem cupiditate doloremque debitis illo repellendus dignissimos sed, obcaecati aliquid, quo quas! Beatae repellat nihil illum reiciendis delectus atque, quod suscipit distinctio aliquam sit, at architecto laudantium pariatur laborum tenetur esse quis explicabo dicta iure ratione quo libero dignissimos. Praesentium consequuntur sint necessitatibus! Tenetur modi blanditiis, nihil quo voluptas dolorum alias ipsam nobis doloremque inventore cumque expedita quia, corrupti doloribus veritatis iure quidem. Explicabo odio magnam facilis reprehenderit.
+            <div class="col align-self-center ">
+                <p class="text-break text-info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi porro maxime libero, molestias dolore earum amet expedita debitis commodi laudantium, enim, deleniti molestiae consequatur impedit rerum assumenda numquam. Perspiciatis modi odit officiis autem cupiditate doloremque debitis illo repellendus dignissimos sed, obcaecati aliquid, quo quas! Beatae repellat nihil illum reiciendis delectus atque, quod suscipit distinctio aliquam sit, at architecto laudantium pariatur laborum tenetur esse quis explicabo dicta iure ratione quo libero dignissimos. Praesentium consequuntur sint necessitatibus! Tenetur modi blanditiis, nihil quo voluptas dolorum alias ipsam nobis doloremque inventore cumque expedita quia, corrupti doloribus veritatis iure quidem. Explicabo odio magnam facilis reprehenderit.</p>
+                
             </div>
         </div>
     </div>
