--- a/ueberzoo.html
+++ b/ueberzoo.html
@@ -30,13 +30,15 @@
     </header>
 
     <!--Inhalt-->
+    <div class="b-example-divider"></div>
     <div class="container" id="inhalt">
         <div class="row ">
             <div class="col">
                 <img src="img/Dummyzoo.jfif" class="rounded mx-auto d-block " alt="Zoo">
                 </div>
-            <div class="col align-self-center text-info my-20   ">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nulla adipisci asperiores accusantium. Voluptates, suscipit laboriosam? Esse incidunt ipsam voluptatibus? Pariatur molestiae, vel impedit ab expedita delectus excepturi enim repudiandae beatae consectetur optio soluta accusantium laudantium adipisci provident modi omnis inventore sed nobis nostrum distinctio hic incidunt perferendis fugit. Voluptas, id doloremque! Veniam, cum. Modi necessitatibus dicta illum repellat, pariatur ratione odit impedit. Modi voluptatem sint culpa, sed odio consequuntur laboriosam temporibus magni exercitationem provident nisi suscipit tenetur! Aliquid voluptas facilis mollitia omnis, voluptatem explicabo quo, quasi nulla debitis fugit, doloremque rem facere sit sapiente quod in odio quibusdam harum.
+            <div class="col align-self-center text-info">
+                <p class="text-break text-info">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nulla adipisci asperiores accusantium. Voluptates, suscipit laboriosam? Esse incidunt ipsam voluptatibus? Pariatur molestiae, vel impedit ab expedita delectus excepturi enim repudiandae beatae consectetur optio soluta accusantium laudantium adipisci provident modi omnis inventore sed nobis nostrum distinctio hic incidunt perferendis fugit. Voluptas, id doloremque! Veniam, cum. Modi necessitatibus dicta illum repellat, pariatur ratione odit impedit. Modi voluptatem sint culpa, sed odio consequuntur laboriosam temporibus magni exercitationem provident nisi suscipit tenetur! Aliquid voluptas facilis mollitia omnis, voluptatem explicabo quo, quasi nulla debitis fugit, doloremque rem facere sit sapiente quod in odio quibusdam harum.</p>
             </div>
         </div>
     </div>
