Umbennenung einer Klasse

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!--Ende Navigationsleiste-->
     </header>
     <!--Inhalt-->
-    <div class="b-example-divider"></div>
+    <div class="divider"></div>
     <section>
     <div class="container" id="inhalt">
         <div class="row ">
