--- a/ueberzoo.html
+++ b/ueberzoo.html
@@ -30,7 +30,7 @@
     </header>
 
     <!--Inhalt-->
-    <div class="b-example-divider"></div>
+    <div class="divider"></div>
     <div class="container" id="inhalt">
         <div class="row ">
             <div class="col">
