--- a/weisserhai.html
+++ b/weisserhai.html
@@ -31,7 +31,7 @@
     </header>
     <section>
         <!--Inhalt-->
-        
+        <div class="divider"></div>
         <div class="container" id="inhalt">
             <div class="row">
                 <div class="col-6">
@@ -63,7 +63,7 @@
         </div>
 
     </section>
-    
+    <div class="divider"></div>
     <footer class="text-center text-white fixed-bottom">
         <!-- Grid container -->
         <div class="container p-4"></div>
