--- a/weisserhai.html
+++ b/weisserhai.html
@@ -31,8 +31,9 @@
     </header>
     <section>
         <!--Inhalt-->
-        <div class="divider"></div>
+        <div class="divider-a"></div>
         <div class="container" id="inhalt">
+            <!--Oberste Reihe-->
             <div class="row">
                 <div class="col-6">
                     <a href="tierseite.html">Zurück (Tierseite)</a>
@@ -41,15 +42,21 @@
                     <a href="#">Weiter (Nächstes Tier)</a>
                 </div>
             </div>
+
+
+            <!--Container für Bild-->
             <div class="row ">
                 <div class="container-fluid"> 
                     <div class="col">
                     <img src="img/Dummyzoo.jfif" class="rounded mx-auto d-block" alt="Zoo">
+                    </div>
                 </div>
             </div>
-                
-            </div>
 
+            <!--Divider-->
+            <div class="divider-a"></div>
+
+            <!--Container für Text-->
             <div class="row">
                     <div class="col align-self-center text-info ">
                         
@@ -63,7 +70,7 @@
         </div>
 
     </section>
-    <div class="divider"></div>
+    <div class="divider-b"></div>
     <footer class="text-center text-white fixed-bottom">
         <!-- Grid container -->
         <div class="container p-4"></div>
