--- a/tierseite.html
+++ b/tierseite.html
@@ -52,7 +52,7 @@
                     <div class="content">                       
                         <div class="card-body mx-auto">
                             <h5 class="card-title">Blauer Wal</h5>
-                            <a href="#" class="btn btn-primary btn-sm">Siehe Infos</a>
+                            <a href="blauerwal.html" class="btn btn-primary btn-sm">Siehe Infos</a>
                         </div>
                     </div>
                 </div> 
@@ -63,7 +63,7 @@
                     <div class="content">
                         <div class="card-body mx-auto">
                             <h5 class="card-title">Delfin</h5>
-                            <a href="#" class="btn btn-primary btn-sm">Siehe Infos</a>
+                            <a href="delfin.html" class="btn btn-primary btn-sm">Siehe Infos</a>
                         </div>
                     </div>
                 </div> 
@@ -78,7 +78,7 @@
                     <div class="content">
                         <div class="card-body mx-auto">
                             <h5 class="card-title">Mekong Riesenwels</h5>
-                            <a href="#" class="btn btn-primary btn-sm">Siehe Infos</a>
+                            <a href="riesenwels.html" class="btn btn-primary btn-sm">Siehe Infos</a>
                         </div>
                     </div>
                 </div> 
@@ -89,7 +89,7 @@
                     <div class="content">                       
                         <div class="card-body mx-auto">
                             <h5 class="card-title">Riemenfisch</h5>
-                            <a href="#" class="btn btn-primary btn-sm">Siehe Infos</a>
+                            <a href="riemenfisch.html" class="btn btn-primary btn-sm">Siehe Infos</a>
                         </div>
                     </div>
                 </div> 
@@ -100,7 +100,7 @@
                     <div class="content">
                         <div class="card-body mx-auto">
                             <h5 class="card-title">Riesenmanta</h5>
-                            <a href="#" class="btn btn-primary btn-sm">Siehe Infos</a>
+                            <a href="riesenmanta.html" class="btn btn-primary btn-sm">Siehe Infos</a>
                         </div>
                     </div>
                 </div> 
