--- a/blauerwal.html
+++ b/blauerwal.html
@@ -60,9 +60,19 @@
             <div class="row">
                     <div class="col align-self-center text-info ">
                         
-                        <p class="text-left"></p> 
-                        <p class="text-left"></p> 
-                        <p class="text-left"></p>
+                        <p class="text-left">Der Blauwal ist das größte und schwerste Tier. Von allen Tieren, die am Land, in der Luft und im Wasser leben, ist der Blauwal das größte und schwerste Tier. Er ist aber nicht das längste Tier, denn das ist ein kleiner Schnurwurm!</p>
+
+                        <p class="text-left">Ein Blauwal ist bis zu 200 Tonnen schwer. Aber ab einer gewissen Größe ist es immer schwer, sich etwas vorzustellen.
+                            Deshalb hier einige Vergleiche: Ein Blauwal wiegt so viel wie vier große Brontosaurier, 23 Elefanten, 230 Kühe oder 1.800 Menschen.
+                            Allein seine Zunge ist so schwer wie ein junger Elefant (denk daran, wenn du das nächste Mal im Zoo einen Elefanten siehst).
+                            Ein Blauwalbaby bringt es bei seiner Geburt auf sage und schreibe zwei Tonnen. Das ist so viel wie zwei Kleinwagen.
+                            Und jetzt zur Größe: Das Herz eines ausgewachsenen Blauwals ist so groß wie ein Golf Cart.</p>
+
+                        <p class="text-left">Was fressen Blauwale?
+                            Blauwale fressen täglich vier bis acht Tonnen Plankton, Krill und kleine Fische.
+                            Blauwale tauchen mindestens alle zwei Minuten auf, um Luft zu holen. Für gewöhnlich sind es zwischen drei und zehn Minuten, im Extremfall bis zu 20 Minuten.
+                            Selbst wenn ein Blauwal mal in Hektik gerät und sich körperlich anstrengt, schlägt sein Herz nur 18 bis 20 Mal in der Minute. Bei einem Menschen würde das Herz über 100 Mal in der Minute schlagen.</p>
+                            <p>Quelle:<a href="https://www.tierchenwelt.de/zahnwale/101-blauwal.html">https://www.tierchenwelt.de/zahnwale/101-blauwal.html</a></p>
                         
 
                     </div>
