--- a/delfin.html
+++ b/delfin.html
@@ -60,9 +60,14 @@
             <div class="row">
                     <div class="col align-self-center text-info ">
                         
-                        <p class="text-left"></p> 
-                        <p class="text-left"></p> 
-                        <p class="text-left"></p>
+                        <p class="text-left">Delfine (Delphinidae) gehören zu den Walen. Man unterscheidet zwischen Meeres- und Flussdelfinen. Die bekanntesten unter den rund 40 Arten sind der Große Tümmler und der Schwertwal.</p> 
+
+                        <p class="text-left">Delfine leben in allen Ozeanen sowie in großen Flüssen wie dem Amazonas in Brasilien oder dem Jangtsekiang in China. Einige Arten sind vom Aussterben bedroht.</p> 
+
+                        <p class="text-left">Kleine Arten wie der Heaviside-Delfin werden nur 1,4 Meter lang. Schwertwale erreichen dagegen über 9 Meter. Das Gehirn von Delfinen ist – verhältnismäßig – eines der größten im Säugetierreich. Nur wir Menschen übertreffen sie. Ihr großes Gehirn, in den 1950er-Jahren "entdeckt", brachte den Delfinen den Ruf ein, besonders schlau zu sei. Ausgewachsen bringt der Große Tümmler ein Gewicht von bis zu 650 Kilogramm auf die Waage. Schwertwale werden sogar bis zu 5400 Kilogramm schwer!</p>
+
+                        <p class="text-left">Delfin-Weibchen bringen alle drei bis fünf Jahre ein Kalb auf die Welt, das sie etwa 18 Monate lang säugen.Die Feinde des Delfins sind größere Haie und der Mensch.</p>
+                        <p class="text-left">Quelle:<a href="https://www.geo.de/geolino/tierlexikon/2082-rtkl-tierlexikon-delfine">https://www.geo.de/geolino/tierlexikon/2082-rtkl-tierlexikon-delfines</a></p>
                         
 
                     </div>
