--- a/riesenwels.html
+++ b/riesenwels.html
@@ -60,9 +60,26 @@
             <div class="row">
                     <div class="col align-self-center text-info ">
                         
-                        <p class="text-left"></p> 
-                        <p class="text-left"></p> 
-                        <p class="text-left"></p>
+                        <p class="text-left">Der Mekong-Riesenwels (Pangasianodon gigas) ist ein Süßwasserfisch aus der Familie Haiwelse (Pangasiidae).
+                            Mit einer maximalen Länge von etwa 300 cm ist der Mekong-Riesenwels einer der größten Süßwasserfische der Welt.
+                            Er kommt ausschließlich im Mekong vor und gilt durch Überfischung und Verlust des Lebensraums als vom Aussterben bedroht.</p> 
+
+                        <p class="text-left">
+                            Mekong-Riesenwelse sind wie alle Haiwelse schuppenlos und haben einen langgestreckten, seitlich abgeflachten Körper
+                            Mekong-Riesenwelse sind silbrig-grau mit blassweißlichem Bauch und weisen keine Zeichnungen auf
+                            die Flossen des Mekong-Riesenwels sind stets grau
+                            Jungtiere sind dunkler mit silbrig-glänzendem Bauch und haben zwei Streifen entlang der Flanken
+                            ihr Kopf macht 14 bis 21 % der Standardlänge (Kopf und Rumpf ohne Schwanzflosse) aus und ist breiter als
+                            beim Pangasius (Pangasianodon hypophthalmus), aber nicht so breit wie bei Pangasius sanitwongsei
+                            sein Maul ist stumpf oder abgerundet und endständig, mit etwas vorragendem Unterkiefer
+                            bei Jungtieren sitzen an Ober- und Unterkiefer jeweils ein Paar Barteln und das Auge sitzt höher als bei den anderen Haiwelsen
+                            Unter- und Oberkiefer sowie das Pflugscharbein weisen kleine, kegelförmige und relativ stumpfe Zähne auf
+                            bei älteren Tieren, die etwa eine Länge von 30 bis 50 Zentimetern erreicht haben, fallen die Zähne aus und die Barteln bilden sich zurück. Das Bartelpaar am Oberkiefer ist dann nur noch drei bis vier Millimeter lang, das am Unterkiefer verschwindet völlig im Fettgewebe
+                            die Augen des Mekong-Riesenwels wandern bis unter die Höhe des Mundwinkels herab, was bei keiner anderen Haiwels-Art vorkommt</p> 
+
+                        <p class="text-left">Der Mekong-Riesenwels wird max. ca. 3 m lang und bis zu 300 kg schwer. Die Weibchen werden dabei länger und schwerer als die Männchen.Der Mekong-Riesenwels kommt endemisch im Mekong-Gebiet vor. Ursprünglich umfasste das Verbreitungsgebiet wahrscheinlich den gesamten Mekong und dessen Nebenflüsse in Laos, Thailand, Kambodscha, Burma, Vietnam und Südchina.</p>
+
+                        <p class="text-left">Quelle:<a href="https://www.fischlexikon.eu/fischlexikon/fische-suchen.php?fisch_id=0000000402">https://www.fischlexikon.eu/fischlexikon/fische-suchen.php?fisch_id=0000000402</a></p>
                         
 
                     </div>
