--- a/riemenfisch.html
+++ b/riemenfisch.html
@@ -60,10 +60,17 @@
             <div class="row">
                     <div class="col align-self-center text-info ">
                         
-                        <p class="text-left"></p> 
-                        <p class="text-left"></p> 
-                        <p class="text-left"></p>
+                        <p class="text-left">Regalecus glesne ist ein antitropischer Meeresfisch aus der Gattung Regalecus. Dieser Riemenfisch kommt weltweit in allen kühleren Ozeanen vor, auch im Mittelmeer. Regalecus glesne erreicht eine maximale Länge von etwa 800 cm und ein maximales Gewicht von ca. 270 kg. Er ist damit der längste Knochenfisch der Welt.</p> 
+
+                        <p class="text-left">Regalecus glesne besitzt eine langgestreckte (fast aalartige), bandförmige Körperform, die seitlich stark komprimiert ist
+auf dem kleinen Kopf von Regalecus glesne sitzt vorne ein weit vorstülpbares, zahnloses Maul
+                            die Grundfärbung von Regalecus glesne ist silbrig
+                            seine Körperflanken sind mit mehreren blauen Querbändern bedeckt, dazwischen befinden sich zahlreiche schwarze und auch bräunliche Punkte
+                            der Ansatz seiner recht eigenartig gestalteten Rückenflosse befindet sich auf dem Hinterkopf direkt über den Augen. Sie reicht fast bis zur Spitze des Schwanzes. Die ersten Strahlen der Rückenflosse sind bis zu 100 cm lang, kammartig, am Ende verdickt und leuchtend rot gefärbt. Der 1. Kamm wird von 6 bis 8 Flossenmembranen miteinander verbundenen Flossenstrahlen gebildet, der 2. Kamm durch 5 bis 11 Flossenstrahlen. Dieser ist nicht durch Flossenmembranen mit dem vorderen Kamm oder der Rückenflosse verbunden</p> 
+
+                        <p class="text-left">Regalecus glesne wird maximal etwa 800 cm lang. Das maximale Gewicht beträgt ca. 270 kg.Regalecus glesne ist weltweit in allen antitropischen (kühleren) Ozeanen verbreitet (72°N - 52°S, 180°W - 180°O). Warme, tropische Gewässer meidet dieser Riemenfisch. Er lebt in Wassertiefen zwischen 20 bis 1.000 Meter, in der Regel trifft man ihn in Wassertiefen zwischen 20 und 200 Meter an.</p>
                         
+                        <p class="text-left">Quelle:<a href="https://www.fischlexikon.eu/fischlexikon/fische-suchen.php?fisch_id=0000002290">https://www.fischlexikon.eu/fischlexikon/fische-suchen.php?fisch_id=0000002290</a></p>
 
                     </div>
             </div>
