--- a/riesenmanta.html
+++ b/riesenmanta.html
@@ -60,10 +60,13 @@
             <div class="row">
                     <div class="col align-self-center text-info ">
                         
-                        <p class="text-left"></p> 
-                        <p class="text-left"></p> 
-                        <p class="text-left"></p>
+                        <p class="text-left">Mit seiner maximalen Spannweite von bis zu neun Metern ist der Riesenmanta der größte Rochen der Welt. An den Küsten von Australien, Indonesien und Thailand können Taucher den friedlichen Tieren unter anderem begegnen </p>
+
+                        <p class="text-left">Riesenmantas gehören zur Gattung der Teufelsrochen. Ihre Kopfflossen, der peitschenartige Schwanz und ihre dunkle Erscheinung verliehen den Teufelsrochen ihren Namen. Doch nur rein äußerlich erinnern sie an den Schrecken der Unterwelt, denn ihr friedliches Wesen birgt für niemanden eine Gefahr.</p> 
+
+                        <p class="text-left">Mit einer maximalen Spannweite von neun Metern und einer Gesamtlänge von bis zu acht Metern ist der Riesenmanta der größte Rochen der Weltmeere. Er besitzt an der Oberseite seines Schwanzes keinen Giftstachel, wie andere Rochen-Arten.</p>
                         
+                        <p class="text-left">Quelle:<a href="https://www.123tauchsport.de/riesenmanta-der-friedliche-teufel/">https://www.123tauchsport.de/riesenmanta-der-friedliche-teufel/</a></p>
 
                     </div>
             </div>
