Tier Bilder eingefügt

--- a/riesenwels.html
+++ b/riesenwels.html
@@ -48,7 +48,7 @@
             <div class="row ">
                 <div class="container-fluid"> 
                     <div class="col">
-                    <img src="img/Dummyzoo.jfif" class="rounded mx-auto d-block" alt="Zoo">
+                    <img src="img/riesenwels.jpg" class="rounded mx-auto d-block" alt="Zoo">
                     </div>
                 </div>
             </div>
