--- a/tierseite.html
+++ b/tierseite.html
@@ -37,7 +37,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/Dummyzoo.jfif" class="card-img-top" alt="bild">
+                    <img src="img/weisserhai.jpg" class="card-img-top" alt="bild">
                     <div class="content">
                         <div class="card-body mx-auto">
                             <h5 class="card-title">Weisser Hai</h5>
@@ -48,7 +48,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/Dummyzoo.jfif" class="card-img-top" alt="bild">
+                    <img src="img/blauerwal.jpg" class="card-img-top" alt="bild">
                     <div class="content">                       
                         <div class="card-body mx-auto">
                             <h5 class="card-title">Blauer Wal</h5>
@@ -59,7 +59,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/Dummyzoo.jfif" class="card-img-top" alt="bild">
+                    <img src="img/delfin.jpg" class="card-img-top" alt="bild">
                     <div class="content">
                         <div class="card-body mx-auto">
                             <h5 class="card-title">Delfin</h5>
@@ -74,7 +74,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/Dummyzoo.jfif" class="card-img-top" alt="bild">
+                    <img src="img/riesenwels.jpg" class="card-img-top" alt="bild">
                     <div class="content">
                         <div class="card-body mx-auto">
                             <h5 class="card-title">Mekong Riesenwels</h5>
@@ -85,7 +85,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/Dummyzoo.jfif" class="card-img-top" alt="bild">
+                    <img src="img/riemenfisch.jpg" class="card-img-top" alt="bild">
                     <div class="content">                       
                         <div class="card-body mx-auto">
                             <h5 class="card-title">Riemenfisch</h5>
@@ -96,7 +96,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/Dummyzoo.jfif" class="card-img-top" alt="bild">
+                    <img src="img/riesenmanta.jpg" class="card-img-top" alt="bild">
                     <div class="content">
                         <div class="card-body mx-auto">
                             <h5 class="card-title">Riesenmanta</h5>
