--- a/delfin.html
+++ b/delfin.html
@@ -48,7 +48,7 @@
             <div class="row ">
                 <div class="container-fluid"> 
                     <div class="col">
-                    <img src="img/delfin.jpg" class="rounded mx-auto d-block" alt="Zoo">
+                    <img src="img/delfin.jpg" class="rounded mx-auto d-block" alt="Zoo" id="tier">
                     </div>
                 </div>
             </div>
