--- a/ueberzoo.html
+++ b/ueberzoo.html
@@ -38,7 +38,7 @@
                 </div>
             <div class="col align-self-center text-info">
                 <p class="text-break text-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime nulla adipisci asperiores accusantium. Voluptates, suscipit laboriosam? Esse incidunt ipsam voluptatibus? Pariatur molestiae, vel impedit ab expedita delectus excepturi enim repudiandae beatae consectetur optio soluta accusantium laudantium adipisci provident modi omnis inventore sed nobis nostrum distinctio hic incidunt perferendis fugit. Voluptas, id doloremque! Veniam, cum. Modi necessitatibus dicta illum repellat, pariatur ratione odit impedit. Modi voluptatem sint culpa, sed odio consequuntur laboriosam temporibus magni exercitationem provident nisi suscipit tenetur! Aliquid voluptas facilis mollitia omnis, voluptatem explicabo quo, quasi nulla debitis fugit, doloremque rem facere sit sapiente quod in odio quibusdam harum.</p>
+                    Dieser Meeres Zoo ist entstanden, weil ich ein Tier begeisteter Mensch bin. Mit meinem Privat vermögen habe ich das ganze finanziert. Ich hab so wenig Tiere, weil sie erstens teuer sind und zweitens es viel Geld und Geduld braucht auf so viele Tiere acht zu geben.</p>
             </div>
         </div>
     </div>
