Text und Bilder verbessert

--- a/delfin.html
+++ b/delfin.html
@@ -39,7 +39,7 @@
                     <a href="tierseite.html">Zurück (Tierseite)</a>
                 </div>
                 <div class="col-2">
-                    <a href="#">Weiter (Nächstes Tier)</a>
+                    <a href="riesenwels.html">Weiter (Nächstes Tier)</a>
                 </div>
             </div>
 
@@ -59,7 +59,7 @@
             <!--Container für Text-->
             <div class="row">
                     <div class="col align-self-center text-info ">
-                        
+                        <h2>Delfin</h2>
                         <p class="text-left">Delfine (Delphinidae) gehören zu den Walen. Man unterscheidet zwischen Meeres- und Flussdelfinen. Die bekanntesten unter den rund 40 Arten sind der Große Tümmler und der Schwertwal.</p> 
 
                         <p class="text-left">Delfine leben in allen Ozeanen sowie in großen Flüssen wie dem Amazonas in Brasilien oder dem Jangtsekiang in China. Einige Arten sind vom Aussterben bedroht.</p> 
