--- a/riemenfisch.html
+++ b/riemenfisch.html
@@ -39,7 +39,7 @@
                     <a href="tierseite.html">Zurück (Tierseite)</a>
                 </div>
                 <div class="col-2">
-                    <a href="#">Weiter (Nächstes Tier)</a>
+                    <a href="riesenmanta.html">Weiter (Nächstes Tier)</a>
                 </div>
             </div>
 
@@ -60,6 +60,7 @@
             <div class="row">
                     <div class="col align-self-center text-info ">
                         
+                        <h2>Riemenfisch</h2>
                         <p class="text-left">Regalecus glesne ist ein antitropischer Meeresfisch aus der Gattung Regalecus. Dieser Riemenfisch kommt weltweit in allen kühleren Ozeanen vor, auch im Mittelmeer. Regalecus glesne erreicht eine maximale Länge von etwa 800 cm und ein maximales Gewicht von ca. 270 kg. Er ist damit der längste Knochenfisch der Welt.</p> 
 
                         <p class="text-left">Regalecus glesne besitzt eine langgestreckte (fast aalartige), bandförmige Körperform, die seitlich stark komprimiert ist
