--- a/riesenmanta.html
+++ b/riesenmanta.html
@@ -39,7 +39,6 @@
                     <a href="tierseite.html">Zurück (Tierseite)</a>
                 </div>
                 <div class="col-2">
-                    <a href="#">Weiter (Nächstes Tier)</a>
                 </div>
             </div>
 
@@ -60,6 +59,7 @@
             <div class="row">
                     <div class="col align-self-center text-info ">
                         
+                        <h2>Riesenmanta</h2>
                         <p class="text-left">Mit seiner maximalen Spannweite von bis zu neun Metern ist der Riesenmanta der größte Rochen der Welt. An den Küsten von Australien, Indonesien und Thailand können Taucher den friedlichen Tieren unter anderem begegnen </p>
 
                         <p class="text-left">Riesenmantas gehören zur Gattung der Teufelsrochen. Ihre Kopfflossen, der peitschenartige Schwanz und ihre dunkle Erscheinung verliehen den Teufelsrochen ihren Namen. Doch nur rein äußerlich erinnern sie an den Schrecken der Unterwelt, denn ihr friedliches Wesen birgt für niemanden eine Gefahr.</p> 
