--- a/weisserhai.html
+++ b/weisserhai.html
@@ -39,7 +39,7 @@
                     <a href="tierseite.html">Zurück (Tierseite)</a>
                 </div>
                 <div class="col-2">
-                    <a href="#">Weiter (Nächstes Tier)</a>
+                    <a href="blauerwal.html">Weiter (Nächstes Tier)</a>
                 </div>
             </div>
 
@@ -60,6 +60,7 @@
             <div class="row">
                     <div class="col align-self-center text-info ">
                         
+                        <h2>Weisser Hai</h2>
                         <p class="text-left">Weisse Haie die Raubtiere der Meere. Sie sind eines der <b>seltensten</b> Tiere auf der Welt. So selten sogar, dass nicht einmal Experten sich sicher sind wie viele es überhaupt gibt. Schätzungen gehen von 4000 bis zu 25000.</p> 
                         <p class="text-left">Weisse Haie (Carcharodon carcharias) gehören zur Familie der Makrelenhaie. Ihre Zähne sind bis zu 7.5cm lang und in mehreren Reihen hintereinander, ein sogenanntes Revolvergebiss. Weisse Haie haben sehr gute Augen mit denen sie selbst schwaches Licht war nehmen können. Des Weiteren haben Haie spezielle Geschmacksknospen, die über ihren Körper verteilt sind, deswegen erkennen Haie ihre Beute schon durchs Reiben. Sie haben fünf extra lange Kiemenspalten vor den Brustflossen, durch die sie Sauerstoff aus dem Wasser nehmen. Zwischen Nase und Mund besitzen Haie Elektrosensoren, auch gennant Lorenzinische Ampullen. Damit nehmen sie elektrische Felder wahr. Weisse Haie können ausserdem auch einen Tropfen Blut in der Wassermenge eines Schwimmbeckens riechen. Weibliche Weisse Haie werden  zwischen 4.5 und 5 Meter lang und bis 2 tonnen schwer. Dies macht den Weissen Hai zum grössten Raubfisch der Erde. Die Männlichen Weissen Haie sind ein bisschen kleiner und leichter.</p> 
                         <p class="text-left">In denen gebieten sind weisse Haie verbreitet (Siehe Bild).</p>
