--- a/blauerwal.html
+++ b/blauerwal.html
@@ -39,7 +39,7 @@
                     <a href="tierseite.html">Zurück (Tierseite)</a>
                 </div>
                 <div class="col-2">
-                    <a href="#">Weiter (Nächstes Tier)</a>
+                    <a href="delfin.html">Weiter (Nächstes Tier)</a>
                 </div>
             </div>
 
@@ -60,6 +60,7 @@
             <div class="row">
                     <div class="col align-self-center text-info ">
                         
+                        <h2>Blauer wal</h2>
                         <p class="text-left">Der Blauwal ist das größte und schwerste Tier. Von allen Tieren, die am Land, in der Luft und im Wasser leben, ist der Blauwal das größte und schwerste Tier. Er ist aber nicht das längste Tier, denn das ist ein kleiner Schnurwurm!</p>
 
                         <p class="text-left">Ein Blauwal ist bis zu 200 Tonnen schwer. Aber ab einer gewissen Größe ist es immer schwer, sich etwas vorzustellen.
