--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 <img src="img/Dummyzoo.jfif" class="rounded mx-auto d-block" alt="Zoo">
                 </div>
             <div class="col align-self-center ">
-                <p class="text-break text-info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi porro maxime libero, molestias dolore earum amet expedita debitis commodi laudantium, enim, deleniti molestiae consequatur impedit rerum assumenda numquam. Perspiciatis modi odit officiis autem cupiditate doloremque debitis illo repellendus dignissimos sed, obcaecati aliquid, quo quas! Beatae repellat nihil illum reiciendis delectus atque, quod suscipit distinctio aliquam sit, at architecto laudantium pariatur laborum tenetur esse quis explicabo dicta iure ratione quo libero dignissimos. Praesentium consequuntur sint necessitatibus! Tenetur modi blanditiis, nihil quo voluptas dolorum alias ipsam nobis doloremque inventore cumque expedita quia, corrupti doloribus veritatis iure quidem. Explicabo odio magnam facilis reprehenderit.</p>
+                <p class="text-break text-info">
+                    Dies ist die offzielle Seite des Meeres Zoo. Hier zu finden sind sind 6 verschiedene Fischarten, die nicht nur selten sondern unglaublich faszinierend sind. Schaut es euch selbst an.
+                </p>
                 
             </div>
         </div>
