--- a/riesenwels.html
+++ b/riesenwels.html
@@ -39,7 +39,7 @@
                     <a href="tierseite.html">Zurück (Tierseite)</a>
                 </div>
                 <div class="col-2">
-                    <a href="#">Weiter (Nächstes Tier)</a>
+                    <a href="riemenfisch.html">Weiter (Nächstes Tier)</a>
                 </div>
             </div>
 
@@ -60,6 +60,7 @@
             <div class="row">
                     <div class="col align-self-center text-info ">
                         
+                        <h2>Mekong Riesenwels</h2>
                         <p class="text-left">Der Mekong-Riesenwels (Pangasianodon gigas) ist ein Süßwasserfisch aus der Familie Haiwelse (Pangasiidae).
                             Mit einer maximalen Länge von etwa 300 cm ist der Mekong-Riesenwels einer der größten Süßwasserfische der Welt.
                             Er kommt ausschließlich im Mekong vor und gilt durch Überfischung und Verlust des Lebensraums als vom Aussterben bedroht.</p> 
