--- a/ueberzoo.html
+++ b/ueberzoo.html
@@ -34,7 +34,7 @@
     <div class="container" id="inhalt">
         <div class="row ">
             <div class="col">
-                <img src="img/Dummyzoo.jfif" class="rounded mx-auto d-block " alt="Zoo">
+                <img src="img/delfin.jpg" class="rounded mx-auto d-block " alt="Zoo"  id="titelbild">
                 </div>
             <div class="col align-self-center text-info">
                 <p class="text-break text-info">
