--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container" id="inhalt">
         <div class="row ">
             <div class="col">
-                <img src="img/Dummyzoo.jfif" class="rounded mx-auto d-block" alt="Zoo">
+                <img src="img/weisserhai.jpg" class="rounded mx-auto d-block" alt="Zoo" id="titelbild">
                 </div>
             <div class="col align-self-center ">
                 <p class="text-break text-info">
