--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <img src="img/weisserhai.jpg" class="rounded mx-auto d-block" alt="Zoo" id="titelbild">
                 </div>
             <div class="col align-self-center ">
-                <p class="text-break text-info">
+                <p class="text-break">
                     Dies ist die offzielle Seite des Meeres Zoo. Hier zu finden sind sind 6 verschiedene Fischarten, die nicht nur selten sondern unglaublich faszinierend sind. Schaut es euch selbst an.
                 </p>
                 
