--- a/ueberzoo.html
+++ b/ueberzoo.html
@@ -37,7 +37,7 @@
                 <img src="img/delfin.jpg" class="rounded mx-auto d-block " alt="Zoo"  id="titelbild">
                 </div>
             <div class="col align-self-center text-info">
-                <p class="text-break text-info">
+                <p class="text-break">
                     Dieser Meeres Zoo ist entstanden, weil ich ein Tier begeisteter Mensch bin. Mit meinem Privat vermögen habe ich das ganze finanziert. Ich hab so wenig Tiere, weil sie erstens teuer sind und zweitens es viel Geld und Geduld braucht auf so viele Tiere acht zu geben.</p>
             </div>
         </div>
