--- a/impressum.html
+++ b/impressum.html
@@ -29,8 +29,12 @@
         </nav>
         <!--Ende der Navigationsleiste-->
     </header>
-
-
+<div class="divider-a"></div>
+<div class="container">
+    <h1 class="text-center">Impressum</h1>.
+    <p class="text-break"></p>
+</div>
+    
 
 
 
