--- a/blauerwal.html
+++ b/blauerwal.html
@@ -58,7 +58,7 @@
 
             <!--Container für Text-->
             <div class="row">
-                    <div class="col align-self-center text-info ">
+                    <div class="col align-self-center text-info " id="tiertext">
                         
                         <h2>Blauwal</h2>
                         <p class="text-left">Der Blauwal ist das größte und schwerste Tier. Von allen Tieren, die am Land, in der Luft und im Wasser leben, ist der Blauwal das größte und schwerste Tier. Er ist aber nicht das längste Tier, denn das ist ein kleiner Schnurwurm!</p>
