--- a/delfin.html
+++ b/delfin.html
@@ -58,7 +58,7 @@
 
             <!--Container für Text-->
             <div class="row">
-                    <div class="col align-self-center text-info ">
+                    <div class="col align-self-center text-info " id="tiertext">
                         <h2>Delfin</h2>
                         <p class="text-left">Delfine (Delphinidae) gehören zu den Walen. Man unterscheidet zwischen Meeres- und Flussdelfinen. Die bekanntesten unter den rund 40 Arten sind der Große Tümmler und der Schwertwal.</p> 
 
