--- a/riemenfisch.html
+++ b/riemenfisch.html
@@ -58,7 +58,7 @@
 
             <!--Container für Text-->
             <div class="row">
-                    <div class="col align-self-center text-info ">
+                    <div class="col align-self-center text-info " id="tiertext">
                         
                         <h2>Riemenfisch</h2>
                         <p class="text-left">Regalecus glesne ist ein antitropischer Meeresfisch aus der Gattung Regalecus. Dieser Riemenfisch kommt weltweit in allen kühleren Ozeanen vor, auch im Mittelmeer. Regalecus glesne erreicht eine maximale Länge von etwa 800 cm und ein maximales Gewicht von ca. 270 kg. Er ist damit der längste Knochenfisch der Welt.</p> 
