--- a/riesenmanta.html
+++ b/riesenmanta.html
@@ -56,7 +56,7 @@
 
             <!--Container für Text-->
             <div class="row">
-                    <div class="col align-self-center text-info ">
+                    <div class="col align-self-center text-info " id="tiertext">
                         
                         <h2>Riesenmanta</h2>
                         <p class="text-left">Mit seiner maximalen Spannweite von bis zu neun Metern ist der Riesenmanta der größte Rochen der Welt. An den Küsten von Australien, Indonesien und Thailand können Taucher den friedlichen Tieren unter anderem begegnen </p>
