--- a/riesenwels.html
+++ b/riesenwels.html
@@ -58,7 +58,7 @@
 
             <!--Container für Text-->
             <div class="row">
-                    <div class="col align-self-center text-info ">
+                    <div class="col align-self-center text-info " id="tiertext">
                         
                         <h2>Mekong Riesenwels</h2>
                         <p class="text-left">Der Mekong-Riesenwels (Pangasianodon gigas) ist ein Süßwasserfisch aus der Familie Haiwelse (Pangasiidae).
