--- a/weisserhai.html
+++ b/weisserhai.html
@@ -58,7 +58,7 @@
 
             <!--Container für Text-->
             <div class="row">
-                    <div class="col align-self-center text-info ">
+                    <div class="col align-self-center" id="tiertext">
                         
                         <h2>Weisser Hai</h2>
                         <p class="text-left">Weisse Haie die Raubtiere der Meere. Sie sind eines der <b>seltensten</b> Tiere auf der Welt. So selten sogar, dass nicht einmal Experten sich sicher sind wie viele es überhaupt gibt. Schätzungen gehen von 4000 bis zu 25000.</p> 
