--- a/impressum.html
+++ b/impressum.html
@@ -31,8 +31,26 @@
     </header>
 <div class="divider-a"></div>
 <div class="container">
-    <h1 class="text-center">Impressum</h1>.
-    <p class="text-break"></p>
+    <h1>Impressum</h1>
+
+<h3>Angaben gemäss 5 TMG</h3>
+<p>Azhaar Mohamed<br />
+Köeschenrütistrasse 139<br />
+8052 Zürich</p>
+
+<h3>Kontakt</h3>
+<p>Telefon: 0786319506<br />
+E-Mail: azhaar.mohamed@lernende.bbw.ch</p>
+
+<h3>Postadresse</h3>
+<p>Wülflingerstrasse 17, 8400 Winterthur</p>
+<h3>EU-Streitschlichtung</h3>
+<p>Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: <a href="https://ec.europa.eu/consumers/odr/" target="_blank" rel="noopener noreferrer">https://ec.europa.eu/consumers/odr/</a>.<br /> Unsere E-Mail-Adresse finden Sie oben im Impressum.</p>
+
+<h3>Verbraucherstreitbeilegung/Universalschlichtungsstelle</h3>
+<p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</p>
+
+<p>Quelle: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a></p>
 </div>
     
 
