--- a/tierseite.html
+++ b/tierseite.html
@@ -110,7 +110,7 @@
     <!--Ende Reihe 2-->
  <div class="divider"></div>
  <!--Fusszeile-->
- <footer class="text-center text-white fixed-bottom">
+ <footer class="text-center text-white">
     <!-- Grid container -->
     <div class="container p-4"></div>
     <!-- Grid container -->
