--- a/blauerwal.html
+++ b/blauerwal.html
@@ -82,7 +82,7 @@
 
 
     <div class="divider-b"></div>
-    <footer class="text-center text-white fixed-bottom">
+    <footer class="text-center text-white">
         <!-- Grid container -->
         <div class="container p-4"></div>
         <!-- Grid container -->
