--- a/impressum.html
+++ b/impressum.html
@@ -57,7 +57,7 @@ E-Mail: azhaar.mohamed@lernende.bbw.ch</p>
 
 
     <!--Fusszeile-->
- <footer class="text-center text-white fixed-bottom">
+ <footer class="text-center text-white">
     <!-- Grid container -->
     <div class="container p-4"></div>
     <!-- Grid container -->
