--- a/riemenfisch.html
+++ b/riemenfisch.html
@@ -79,7 +79,7 @@ auf dem kleinen Kopf von Regalecus glesne sitzt vorne ein weit vorstülpbares, z
 
 
     <div class="divider-b"></div>
-    <footer class="text-center text-white fixed-bottom">
+    <footer class="text-center text-white ">
         <!-- Grid container -->
         <div class="container p-4"></div>
         <!-- Grid container -->
