--- a/riesenmanta.html
+++ b/riesenmanta.html
@@ -72,7 +72,7 @@
         </div>
 
     <div class="divider-b"></div>
-    <footer class="text-center text-white fixed-bottom">
+    <footer class="text-center text-white ">
         <!-- Grid container -->
         <div class="container p-4"></div>
         <!-- Grid container -->
