--- a/ueberzoo.html
+++ b/ueberzoo.html
@@ -44,7 +44,7 @@
     </div>
 
 
-    <footer class="text-center text-white">
+    <footer class="text-center text-white fixed-bottom">
         <!-- Grid container -->
         <div class="container p-4"></div>
         <!-- Grid container -->
