--- a/riesenmanta.html
+++ b/riesenmanta.html
@@ -35,7 +35,7 @@
             <!--Oberste Reihe-->
             <div class="row">
                 <div class="col-6">
-                    <a href="tierseite.html">Zurück (Tierseite)</a>
+                    <a href="tierseite.html">Übersicht</a>
                 </div>
                 <div class="col-2">
                 </div>
