--- a/weisserhai.html
+++ b/weisserhai.html
@@ -36,10 +36,10 @@
             <!--Oberste Reihe-->
             <div class="row">
                 <div class="col-6">
-                    <a href="tierseite.html">Zurück (Tierseite)</a>
+                    <a href="tierseite.html">Übersicht</a>
                 </div>
                 <div class="col-2">
-                    <a href="blauerwal.html">Weiter (Nächstes Tier)</a>
+                    <a href="blauerwal.html">Nächstes Tier</a>
                 </div>
             </div>
 
