--- a/ueberzoo.html
+++ b/ueberzoo.html
@@ -41,10 +41,16 @@
                     Dieser Meeres Zoo ist entstanden, weil ich ein Tier begeisteter Mensch bin. Mit meinem Privat vermögen habe ich das ganze finanziert. Ich hab so wenig Tiere, weil sie erstens teuer sind und zweitens es viel Geld und Geduld braucht auf so viele Tiere acht zu geben.</p>
             </div>
         </div>
+        <div class="divider"></div>
+        <span> 
+        <h3 class="text-center">Wir sind auf Google Maps</h3>
+        <p class="text-center">Wir sind offen von Montags bis Freitags von 09:00 Uhr bis 18:00 Uhr</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2701.2770865640714!2d8.572342015423251!3d47.38702631111373!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479aa0ea12b7a697%3A0x31929c3728d4b721!2sZoo%20Z%C3%BCrich!5e0!3m2!1sde!2sch!4v1654698737563!5m2!1sde!2sch" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </span>
     </div>
+    
 
-
-    <footer class="text-center text-white fixed-bottom">
+    <footer class="text-center text-white ">
         <!-- Grid container -->
         <div class="container p-4"></div>
         <!-- Grid container -->
